src/objects/Zoho_Case__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Text__c</fullName>
        <label>Due Date Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Text__c</fullName>
        <label>Email Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Text__c</fullName>
        <label>Phone_Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Closed_Time_Text__c</fullName>
        <label>Request Closed Time Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Created_By_Name__c</fullName>
        <label>Request Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Created_Time_Text__c</fullName>
        <label>Request Created Time Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Request_Modified_By_Name__c</fullName>
        <label>Request Modified By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Modified_Time_Text__c</fullName>
        <label>Request Modified Time Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Owner_Name__c</fullName>
        <label>Request Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Zoho Request ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zoho Case</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Request_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Resolution__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Request_Owner_Name__c</columns>
        <columns>Request_Created_Time_Text__c</columns>
        <columns>Request_Created_By_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <listViews>
        <fullName>Jamba_Juice_Cases</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Due_Date_Text__c</columns>
        <columns>Priority__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Request_ID__c</columns>
        <columns>Request_Modified_By_Name__c</columns>
        <columns>Request_Modified_Time_Text__c</columns>
        <columns>Request_Owner_Name__c</columns>
        <columns>Resolution__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Subject__c</columns>
        <columns>To_Address__c</columns>
        <columns>Zoho_Request_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Jamba Juice</value>
        </filters>
        <label>Jamba Juice Cases</label>
    </listViews>
    <nameField>
        <displayFormat>ZC-{00000000}</displayFormat>
        <label>Zoho Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoho Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>